@@ -1,3 +1,7 @@
+2008-10-31 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.autoconf/*, packages/build.automake/*: added
+
 2008-09-26 Borut Razem <borut.razem AT siol.net>
 
 	* bin/dcf.sh: call rm_old_versions only if anything was uploaded
